package protocol;

enum GameType {
  Texas = 0;
  Omaha = 1;
  Omaha8 = 2;
  Stud = 3;
  Stud8 = 4;
  Razz = 9;
  London = 10;
  FiveCard = 11;
  Single27 = 12;
  Triple27 = 13;
  Badugi = 14;
}

enum GameLimit {
  NoLimit = 0;
  PotLimit = 1;
  FixedLimit = 2;
}

message PlayStart {
}

message StreetStart {
  required string Name = 1;
}

message ChangeGame {
  required GameType Type = 1;
  required GameLimit Limit = 2;
}
